# stock_ml

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
